enable spring again